# workweek-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject-switch.toml  pyproject.toml
docs/: RP_INTEGRATION_GUIDE.md  RP_ONBOARDING_CORRECTIONS.md
examples/: rp_integration.py
workweek/: __init__.py  agents.py  analysis.py  apps.py  chat.py  client.py  data.py  execution.py  knowledge.py  places.py  teams.py
workweek_switch/: __init__.py  _hmac.py  _models.py  _switch.py
